Remaining endpoints (#6)
* get file

* check sample

* tmp

* list files

* refactor

* refactor

* refactor

* get file of sample

* delete file

* get and add qc result

* delete qc results

* refactor

* add, get, delete status

* update status

* refactor

* Delete unused model
