# openapi_server/models/__init__.py
@@ -5,6 +5,6 @@ from __future__ import absolute_import
 # import models into model package
 from openapi_server.models.error import Error
 from openapi_server.models.event import Event
-from openapi_server.models.processing_status import ProcessingStatus
 from openapi_server.models.qc_result import QcResult
 from openapi_server.models.status import Status
+from openapi_server.models.file import File
