# openapi_server/models/status.py
@@ -6,10 +6,8 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model_ import Model
-from openapi_server.models.processing_status import ProcessingStatus
 from openapi_server import util
 
-from openapi_server.models.processing_status import ProcessingStatus  # noqa: E501
 
 class Status(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -21,27 +19,27 @@ class Status(Model):
         """Status - a model defined in OpenAPI
 
         :param de_contamination: The de_contamination of this Status.  # noqa: E501
-        :type de_contamination: ProcessingStatus
+        :type de_contamination: str
         :param qc: The qc of this Status.  # noqa: E501
-        :type qc: ProcessingStatus
+        :type qc: str
         :param variant_calling: The variant_calling of this Status.  # noqa: E501
-        :type variant_calling: ProcessingStatus
+        :type variant_calling: str
         :param prediction: The prediction of this Status.  # noqa: E501
-        :type prediction: ProcessingStatus
+        :type prediction: str
         :param bigsi_building: The bigsi_building of this Status.  # noqa: E501
-        :type bigsi_building: ProcessingStatus
+        :type bigsi_building: str
         :param distance_calculation: The distance_calculation of this Status.  # noqa: E501
-        :type distance_calculation: ProcessingStatus
+        :type distance_calculation: str
         :param stage: The stage of this Status.  # noqa: E501
         :type stage: str
         """
         self.openapi_types = {
-            'de_contamination': ProcessingStatus,
-            'qc': ProcessingStatus,
-            'variant_calling': ProcessingStatus,
-            'prediction': ProcessingStatus,
-            'bigsi_building': ProcessingStatus,
-            'distance_calculation': ProcessingStatus,
+            'de_contamination': str,
+            'qc': str,
+            'variant_calling': str,
+            'prediction': str,
+            'bigsi_building': str,
+            'distance_calculation': str,
             'stage': str
         }
 
@@ -80,7 +78,7 @@ class Status(Model):
 
 
         :return: The de_contamination of this Status.
-        :rtype: ProcessingStatus
+        :rtype: str
         """
         return self._de_contamination
 
@@ -90,10 +88,14 @@ class Status(Model):
 
 
         :param de_contamination: The de_contamination of this Status.
-        :type de_contamination: ProcessingStatus
+        :type de_contamination: str
         """
-        if de_contamination is None:
-            raise ValueError("Invalid value for `de_contamination`, must not be `None`")  # noqa: E501
+        allowed_values = ["pending", "started", "complete", "failed"]  # noqa: E501
+        if de_contamination not in allowed_values:
+            raise ValueError(
+                "Invalid value for `de_contamination` ({0}), must be one of {1}"
+                .format(de_contamination, allowed_values)
+            )
 
         self._de_contamination = de_contamination
 
@@ -103,7 +105,7 @@ class Status(Model):
 
 
         :return: The qc of this Status.
-        :rtype: ProcessingStatus
+        :rtype: str
         """
         return self._qc
 
@@ -113,10 +115,14 @@ class Status(Model):
 
 
         :param qc: The qc of this Status.
-        :type qc: ProcessingStatus
+        :type qc: str
         """
-        if qc is None:
-            raise ValueError("Invalid value for `qc`, must not be `None`")  # noqa: E501
+        allowed_values = ["pending", "started", "complete", "failed"]  # noqa: E501
+        if qc not in allowed_values:
+            raise ValueError(
+                "Invalid value for `qc` ({0}), must be one of {1}"
+                .format(qc, allowed_values)
+            )
 
         self._qc = qc
 
@@ -126,7 +132,7 @@ class Status(Model):
 
 
         :return: The variant_calling of this Status.
-        :rtype: ProcessingStatus
+        :rtype: str
         """
         return self._variant_calling
 
@@ -136,10 +142,14 @@ class Status(Model):
 
 
         :param variant_calling: The variant_calling of this Status.
-        :type variant_calling: ProcessingStatus
+        :type variant_calling: str
         """
-        if variant_calling is None:
-            raise ValueError("Invalid value for `variant_calling`, must not be `None`")  # noqa: E501
+        allowed_values = ["pending", "started", "complete", "failed"]  # noqa: E501
+        if variant_calling not in allowed_values:
+            raise ValueError(
+                "Invalid value for `variant_calling` ({0}), must be one of {1}"
+                .format(variant_calling, allowed_values)
+            )
 
         self._variant_calling = variant_calling
 
@@ -149,7 +159,7 @@ class Status(Model):
 
 
         :return: The prediction of this Status.
-        :rtype: ProcessingStatus
+        :rtype: str
         """
         return self._prediction
 
@@ -159,10 +169,14 @@ class Status(Model):
 
 
         :param prediction: The prediction of this Status.
-        :type prediction: ProcessingStatus
+        :type prediction: str
         """
-        if prediction is None:
-            raise ValueError("Invalid value for `prediction`, must not be `None`")  # noqa: E501
+        allowed_values = ["pending", "started", "complete", "failed"]  # noqa: E501
+        if prediction not in allowed_values:
+            raise ValueError(
+                "Invalid value for `prediction` ({0}), must be one of {1}"
+                .format(prediction, allowed_values)
+            )
 
         self._prediction = prediction
 
@@ -172,7 +186,7 @@ class Status(Model):
 
 
         :return: The bigsi_building of this Status.
-        :rtype: ProcessingStatus
+        :rtype: str
         """
         return self._bigsi_building
 
@@ -182,10 +196,14 @@ class Status(Model):
 
 
         :param bigsi_building: The bigsi_building of this Status.
-        :type bigsi_building: ProcessingStatus
+        :type bigsi_building: str
         """
-        if bigsi_building is None:
-            raise ValueError("Invalid value for `bigsi_building`, must not be `None`")  # noqa: E501
+        allowed_values = ["pending", "started", "complete", "failed"]  # noqa: E501
+        if bigsi_building not in allowed_values:
+            raise ValueError(
+                "Invalid value for `bigsi_building` ({0}), must be one of {1}"
+                .format(bigsi_building, allowed_values)
+            )
 
         self._bigsi_building = bigsi_building
 
@@ -195,7 +213,7 @@ class Status(Model):
 
 
         :return: The distance_calculation of this Status.
-        :rtype: ProcessingStatus
+        :rtype: str
         """
         return self._distance_calculation
 
@@ -205,10 +223,14 @@ class Status(Model):
 
 
         :param distance_calculation: The distance_calculation of this Status.
-        :type distance_calculation: ProcessingStatus
+        :type distance_calculation: str
         """
-        if distance_calculation is None:
-            raise ValueError("Invalid value for `distance_calculation`, must not be `None`")  # noqa: E501
+        allowed_values = ["pending", "started", "complete", "failed"]  # noqa: E501
+        if distance_calculation not in allowed_values:
+            raise ValueError(
+                "Invalid value for `distance_calculation` ({0}), must be one of {1}"
+                .format(distance_calculation, allowed_values)
+            )
 
         self._distance_calculation = distance_calculation
 
